# ChallengeAPI

./: .gitignore  Dockerfile  README.md  alembic.ini  bot_connect.py  docker-compose.yml  main.py  pyproject.toml  start_bot.py
.github/workflows/: dev_challenge-d3v-api.yml
migrations/: env.py
migrations/versions/: 033328f6fd57_init.py  1bf65c4a441d_init.py  1cdcacdeca15_init.py  1ff8e34eb16e_init.py  20e7a7000141_init.py  275b73baade3_hm.py  27ce1ada47cb_delete_tg_id.py  28362fdd7371_init.py  2aef9905f2db_init.py  2bee8dac8742_init.py  2eba2354cb0e_initial_migration.py  3042e411a269_rewrite.py  31ccf7e1ee37_init.py  33c2911476ed_init.py  3fc6e6e7db51_rewrite_integer_on_biginteger.py  443983acc651_rewrite.py  4d8bc04dc613_add_created_at_and_updated_at_to_base_.py  623af03f2d46_init.py  6660566870d6_init.py  66a833d615ed_init.py  6a8d7911d986_add_created_at_and_updated_at_to_base_.py  6e1850b5a51a_initial_migration.py  73e28f443797_init.py  7e10e656cdcd_add_auth_table.py  7e7d1bbee1d0_init.py  838e2934ef43_add_created_at_and_updated_at_to_base_.py  85196c91f8a9_init.py  87086b213518_init.py  9184b96d7afc_initial_migration.py  93d34e54953b_init.py  a0d7c4d02c81_change_created_at_and_updated_at.py  a4ce498d775c_init.py  a7a3513bad66_init.py  b35e201602e7_add_auth.py  b3f99ab5e944_change_int_on_bigint.py  b42a066eccab_init.py  b49538f5e6a5_init.py  b499ba7ca62a_rewrite.py  b6294e243fec_init.py  bf39eb83c68b_.py  (+17 more)
src/: main.py  settings.py  start_bot.py
src/commands/: restart.py  start.py  stop.py
src/core/: config.py  connect.py
src/db/: base.py  config.py  connect.py  connection.py  models.py  session.py
src/models/: base.py  entity.py  user.py
src/repositories/: messages.py  mining.py  users.py
src/routes/: auth.py  lifespan.py  mining.py  referrals.py  users.py
src/schemas/: auth.py  mining.py  (+5 more)
tests/: test_auth_user.py  test_create_user.py  test_login_user.py  test_main.py
(+7 files in other folders)
